# beam-vibro-fe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  gitattributes.txt  gitignore.txt
.cache/clangd/index/: bar.cxx.25B199F6BFA16AF8.idx  bar.hxx.32EBB54CD21DCF83.idx  barAssemble.cxx.883BD1C5E3C05BD9.idx  barAssemble.hxx.32D6204E9D292E3F.idx  barMatrices.cxx.67A907A435510894.idx  barMatrices.hxx.343C4F4D091745AD.idx  barTheory.cxx.6D7C9E49151B3895.idx  barTheory.hxx.A6012232952A2399.idx  beamAssemble.cxx.F7AE8B001648979B.idx  beamAssemble.hxx.51167B43F3A453CE.idx  beamFlex.cxx.2D8A3B66C6A49FDD.idx  beamFlex.hxx.FE87C55567223668.idx  cbar.cxx.EEF6D7F5B3E3DA04.idx  cbar.hxx.75DCCCAB486F4282.idx  element.cxx.30AE46CF6FC304BC.idx  element.hxx.0A1058D22EAED706.idx  eulerBernoulli.cxx.557719A25FB2F980.idx  eulerBernoulli.hxx.36CE08695D88B816.idx  grid.cxx.72E7517B2F55678C.idx  grid.hxx.FA50DAA62B702471.idx  isotropic_material.cxx.796097C24F18688D.idx  isotropic_material.hxx.84807C9F9101B146.idx  line2.cxx.C082A46A9548E09F.idx  line2.hxx.293D1B49E0B28DBC.idx  main.cxx.017B2DCB28635C7F.idx  mat1.cxx.2D375003686A6801.idx  mat1.hxx.C9F9B13151A9C638.idx  material.cxx.A4281BBD3138360A.idx  material.hxx.B4F79CD55D94E5FF.idx  modalSolution.cxx.B2FA5A3C6719489A.idx  modalSolution.hxx.C23C32B01DD5F382.idx  model.cxx.257550C78C5EB974.idx  model.hxx.649FA5994E135669.idx  node.cxx.AA13C8D4E037D5A7.idx  node.hxx.6187E29CB1A4164D.idx  part.cxx.AC81E69A0DA11F8F.idx  part.hxx.C4B19AA42E927B4B.idx  pbar.cxx.FD5B65E3DE8EBA67.idx  pbar.hxx.72A3833D57386C4F.idx  quad4.cxx.EE9CA33C455DDEC0.idx  (+28 more)
app/: CMakeLists.txt  main.cxx
src/: CMakeLists.txt
src/fe-model/: CMakeLists.txt  element.cxx  element.hxx  material.cxx  material.hxx  model.cxx  model.hxx  part.cxx  part.hxx
src/fe-objects/: CMakeLists.txt  bar.cxx  bar.hxx  isotropic_material.cxx  isotropic_material.hxx  line2.cxx  line2.hxx  node.cxx  node.hxx
src/fe-theory/: CMakeLists.txt  barAssemble.cxx  barAssemble.hxx  barMatrices.cxx  barMatrices.hxx  barTheory.cxx  barTheory.hxx  beamAssemble.cxx  beamAssemble.hxx  beamFlex.cxx  beamFlex.hxx  eulerBernoulli.cxx  eulerBernoulli.hxx
src/nastran-io/: CMakeLists.txt  read_card.cxx  read_card.hxx  read_elem.cxx  read_elem.hxx  read_file.cxx  read_file.hxx  read_grid.cxx  read_grid.hxx  read_mat.cxx  read_mat.hxx  read_part.cxx  read_part.hxx  read_util.cxx  read_util.hxx
src/nastran-obj/: CMakeLists.txt  cbar.cxx  cbar.hxx  grid.cxx  grid.hxx  mat1.cxx  mat1.hxx  pbar.cxx  pbar.hxx
tests/: CMakeLists.txt  QA1SS1.bdf  beam.bdf  gridLong.bdf  gridShort.bdf  mat1Long.bdf  mat1Short.bdf  test_read_cards.cxx
